<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false"
    android:background="@drawable/moodler">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moodlerInstructions1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_purple" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moodlerInstructions2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_purple" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moodlerInstructions3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moodlerInstructions4"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moodlerInstructions5"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moodlerInstructions6"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_orange_light" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moodlerInstructions7"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_orange_dark" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moodlerInstructions8"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moodlerInstructions9"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_red_dark" />
    </LinearLayout>
</ScrollView>